Fix CSS for map with z-index, add generic error for bad configuration in graphs

--- a/portail_d4c/css/visualisation.css
+++ b/portail_d4c/css/visualisation.css
@@ -200,7 +200,7 @@ html[dir=rtl] .d4cwidget-last-datasets-feed__theme-picto{float:right}
 @media (max-width:767px){.d4cwidget-map__map--with-display-control .leaflet-top.leaflet-right.collapsed{right:40px}
 }
 .d4cwidget-map .map-timezone-caption{color:rgba(0,0,0,.5);font-size:.85em;padding-top:.5em}
-.d4cwidget-map-display-control{position:absolute;top:10px;-webkit-box-shadow:0 1px 5px rgba(0,0,0,.65);box-shadow:0 1px 5px rgba(0,0,0,.65);border-radius:4px;-webkit-transition:right .25s ease-in;transition:right .25s ease-in}
+.d4cwidget-map-display-control{position:absolute;top:10px;-webkit-box-shadow:0 1px 5px rgba(0,0,0,.65);box-shadow:0 1px 5px rgba(0,0,0,.65);border-radius:4px;-webkit-transition:right .25s ease-in;transition:right .25s ease-in; z-index: 400}
 @media (max-width:767px){.d4cwidget-map-display-control{right:-260px}
 }
 @media (min-width:768px){.d4cwidget-map-display-control{right:10px}
@@ -2257,7 +2257,7 @@ html[dir=rtl] .d4c-search-input__reset{left:2.6rem;right:auto}
 .d4c-map-location-selector{position:relative}
 .d4c-map-location-selector__map{height:300px;width:400px}
 .d4c-map-location-selector__overlay{position:absolute;left:50px;top:50px;height:200px;width:300px;background:rgba(255,255,255,.8);border:1px solid #888;opacity:.7;pointer-events:none}
-.d4c-mapbuilder__main-panel{position: absolute;top: 10px;left: 50px;/* bottom: 90px; *//* right: 0; */width: 175px;/* margin-left: auto; *//* margin-right: auto; */background-color: #fff;opacity: 0.6;border-radius: 2px;-webkit-box-shadow: 0 1px 5px rgba(0,0,0,.65);box-shadow: 0 1px 5px rgba(0,0,0,.65);color: #333;transition: all ease 0.5s; }
+.d4c-mapbuilder__main-panel{position: absolute;top: 10px;left: 50px;/* bottom: 90px; *//* right: 0; */width: 175px;/* margin-left: auto; *//* margin-right: auto; */background-color: #fff;opacity: 0.6;border-radius: 2px;-webkit-box-shadow: 0 1px 5px rgba(0,0,0,.65);box-shadow: 0 1px 5px rgba(0,0,0,.65);color: #333;transition: all ease 0.5s; z-index: 400}
 .d4c-mapbuilder__main-panel:hover{opacity: 1;transition: all ease 0.5s;}
 .d4c-mapbuilder__main-panel__top-bar{border-bottom: solid 1px rgba(0,0,0,.1);display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; /* border-top-left-radius: 4px; */ /* border-top-right-radius: 4px; */ /* overflow: hidden; */ text-align: center;} 
 .d4c-mapbuilder__main-panel__map-selection{-webkit-box-flex:0;-ms-flex-positive:0;flex-grow:0;-ms-flex-negative:0;flex-shrink:0}
